# open-loader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: vcpkg.cmake
source/: CMakeLists.txt  main.cpp
source/LicensingSystem/: CMakeLists.txt  LicenseManager.cpp  LicenseManager.h
